docs: README completo con stack, instrucciones de instalación y estructura del proyecto